<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:padding="13dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Medium Text"
        android:id="@+id/productName"
        android:gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_weight="0.13"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"

            android:id="@+id/imgIcon" />
    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Price:"
            android:id="@+id/productPrice"

            android:textSize="18sp"
            android:layout_weight="0.23"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView3"
            android:layout_toEndOf="@+id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_weight="0.17"
            android:id="@+id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Available:"
            android:id="@+id/productQuantity"

            android:textSize="18sp"
            android:layout_weight="0.23"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available"
            android:id="@+id/textView4"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            android:layout_weight="0.23"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/productQuantity"
            android:layout_toStartOf="@+id/productQuantity" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.56">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantities_to_be_ordered"
            android:textStyle="bold"
            android:id="@+id/textView2"
            android:gravity="center"
            android:textSize="22sp"
            android:layout_alignParentTop="true" />

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:id="@+id/button4"
                android:onClick="quantityDecrement"
                android:layout_gravity="right"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/quantity"
                android:layout_toEndOf="@+id/quantity" />

            <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:id="@+id/button3"
                android:onClick="quantityIncrement"
            android:layout_gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/quantity"
                android:layout_toStartOf="@+id/quantity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:id="@+id/quantity"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/orderNow"
            android:layout_gravity="center_horizontal"
            android:text="@string/order_more"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="onSubmitMore" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickDelete"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:text="DELETE PERMANENTLY"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </LinearLayout>

</LinearLayout>
